# Qrisp

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pymon  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_mont.ipynb
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  documentation.yml  epic.yml  feature_request.yml
.github/agents/: user-support.agent.md
.github/issue_template/: bug_report.yml  change_request.yml  documentation.yml  epic.yml  feature_request.yml
.github/workflows/: changelog.yml  dependabot.yml  docs_build.yml  hardrunner_xdist.yml  main.yml  multi.yml  multiple_enviroments.yml  python13.yml  qrisp_test.yml  qrisp_test_algorithms.yml  reviewdog.yml  ruff_checks.yml  xdist.yml
.ipynb_checkpoints/: jisp_demo-checkpoint.ipynb
catalyst_experiments/: basics.py  environment_interpreter.py  ipython.html  qrisp_integration_tests.py
documentation/: .gitignore  Makefile  README.md  build_docs_temp_env.sh  extensions.bat  requirements_doc.txt
documentation/.ipynb_checkpoints/: README-checkpoint.md
documentation/source/: Qrisp_PPT_Grafiken_v2.pptx  conf.py  index.rst
logo/: gimp_file.xcf  gimp_file_contur.xcf  qrisp_favicon.xcf
pr-688/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
pr-688/.doctrees/: index.doctree
pr-688/_modules/: index.html
pr-688/_sources/: index.rst.txt
pr-688/_static/: backtracking_plot.py  hamiltonian_plot.py  pygments.css  tsp_plot.py
pr-688/general/: imprint.html  setup.html
pr-688/reference/: index.html
qcm_experiments/: qcm_machine.py  qcm_operations.py
requirements/: base.in  base.txt  dev.in  dev.txt  iqm.in  iqm.txt
src/qrisp/: __init__.py  _cache_config.py  default_backend.py  typing.py
tests/: .coverage  .pymon  __init__.py  conftest.py  sketchbook.py  stats_list.pkl  test_GMS_environment_example.py  test_GXX_converter_example.py  test_GXX_gates_example.py  test_GZZ_gates_example.py  test_IQAE.py  test_IQPE.py  test_QAE.py  test_QAOAMkCS.py  test_QAOAQUBO.py  test_QAOA_TQA_warm_start.py  test_QAOAeThrLinTwo.py  test_QAOAeTwoThrLin.py  test_QAOAmaxClique.py  test_QAOAmaxCut.py  test_QAOAmaxIndepSet.py  test_QAOAmaxSat.py  test_QAOAmaxSetPacking.py  test_QAOAminSetCover.py  test_QAOAtrain_func.py  test_QIRO.py  test_QIROMaxSat.py  test_QIROmaxClique.py  test_QITE_heisenberg.py  test_QMCI.py  test_VQE.py  test_VQE_electronic_structure.py  test_VQE_heisenberg.py  test_abstr_params_printing.py  test_abstract_parameters.py  test_amplitude_amplification.py  test_amy_mcx.py  test_arithmetic_tools.py  test_array_entry_manipulation.py  test_backtracking.py  (+52 more)
tests/algorithms_tests/: test_CKS.py  test_QIROMaxSat.py  test_QIROmaxClique.py  test_QITE_heisenberg.py  test_QMCI.py  test_QSVT_inversion.py  test_SQPE.py  test_backtracking.py  test_dicke_states.py  test_grovers_algorithm.py  test_lanczos_algorithm.py  test_quantum_counting.py  test_sudoku.py
tests/block_encodings_tests/: .pymon  test_block_encoding.py  test_block_encoding_arithmetic.py  test_block_encoding_chebyshev.py  test_block_encoding_foqcs_lcu.py  test_block_encoding_from_lcu.py  test_block_encoding_inv.py  test_block_encoding_poly.py  test_block_encoding_pseudo_inv.py  test_block_encoding_sim.py  test_block_encoding_svt.py  test_nested_commutators.py
tests/circuit_tests/: test_quantum_circuit.py
tests/core_tests/: test_GMS_environment_example.py  test_GXX_converter_example.py  test_GXX_gates_example.py  test_GZZ_gates_example.py  test_abstr_params_printing.py  test_abstract_parameters.py  test_array_entry_manipulation.py  test_conditional_environments_example.py  test_conjugation_environment.py  test_controlled_gates.py  test_custom_control.py  test_depth_calculation.py  test_find_detectors.py  test_gray_synthesis_example.py  test_hello_world.py  test_injection.py  test_iteration_environment.py  test_loops.py  test_measurement_reduction.py  test_outcome_array.py  test_qompiler.py  test_quantum_array.py  test_quantum_circuit.py  test_quantum_dictionary.py  test_quantum_float.py  test_state_preparation.py  test_string_test.py  test_uncomputation_example.py  test_unitary_calculation.py  tests_doc_examples.py
tests/enviroments_tests/: test_layered_environment.py  test_quantum_enviroment.py  test_quantum_environment.py
tests/hamiltonian_tests/: test_fermionic_hamiltonian_simulation.py  test_fermionic_term.py  test_fermionic_to_pauli.py  test_fermionic_to_qubit.py  test_measurement_method.py  test_pauli_hamiltonian_simulation.py  test_qubit_hamiltonian_commutator.py  test_qubit_hamiltonian_simulation.py
tests/interface_tests/: conftest.py  repro_move_bug.py  test_aqt_backend.py  test_backend.py  test_batched_backend.py  test_cirq_converter.py  test_converter_QrispToQml.py  test_converter_qrisp_to_qml.py  test_default_backend.py  test_iqm_backend.py  test_job.py  test_kipu_qhub_api_backend.py  test_measurement_result.py  test_qiskit_backend.py  test_qiskit_backend_client.py  test_qiskit_converter.py  test_qrisp_cirq_converter.py  test_stim_backend.py  test_stim_converter.py  test_tket_converter.py  test_virtual_backend.py
tests/jax_tests/: stim_extraction_tests.py  test_HHL_demo.py  test_LCU.py  test_arithmetic.py  test_arithmetic_tools.py  test_basic_primitives.py  test_biginteger.py  test_boolean_simulation.py  test_call_graph_analysis.py  test_catalyst_interface.py  test_comparisons.py  test_composite_gate_interpreter.py  test_conjugation_env.py  test_control_compilation.py  test_control_flow_capturing.py  test_control_flow_interpretation.py  test_count_ops.py  test_count_qubits.py  test_cudaq_kernel.py  test_custom_control.py  test_custom_inverse.py  test_depth.py  test_dynamic_mcx.py  test_dynamic_qubit_array.py  test_dynamic_unitary.py  test_environment_compilation.py  test_injection_operator.py  test_jasp_IQAE.py  test_jasp_IQPE.py  test_jasp_QAE.py  test_jasp_expression.py  (+43 more)
tools/: prepare-release-changelog.py
(+2305 files in other folders)
