[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "qrisp"
version = "0.8.2"
authors = [
    {name = "The Qrisp authors"},
]
description = "A high-level quantum programming language"
readme = "README.md"
requires-python = ">=3.11, <3.13"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Software Development :: Compilers",
]
license = {text = "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0"}

dependencies = [
    "numpy>=2.0,<2.3", # tqecd requires numpy<2.3
    "sympy<=1.13", # https://github.com/sympy/sympy/issues/28039 - fix on dev branch, not released
    "qiskit==2.4.0",
    "matplotlib==3.10.9",
    "scipy==1.17.1",
    "numba==0.65.1",
    "networkx==3.6.1",
    "tqdm==4.67.3",
    "dill==0.4.1",
    "psutil==7.2.2",
    "stim",
    "jax==0.7.1",
    "jaxlib==0.7.1",
]

[project.optional-dependencies]
aqt = ["qiskit-aqt-provider==1.15.0"]
qiskit = ["qiskit-aer==0.17.2", "qiskit-ibm-runtime==0.37.0"]
iqm = ["iqm-client[qiskit]==22.4"]
catalyst = ["pennylane-catalyst==0.15.0", "pennylane==0.45.0"]
xdsl = ["xdsl==0.59.0"]
docs = [
    "sphinx>=7,<9", # sphinx_toolbox.sidebar_links not compatible with Sphinx 9
    "sphinx-toolbox==4.1.2",
    "nbsphinx==0.9.8",
    "ipykernel==7.2.0",
    "myst-parser==5.0.0",
    "texext==0.6.8",
    "numpydoc==1.10.0",
    "sphinx-sitemap==2.9.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.7.0",
    "sphinx-thebe==0.3.1",
    "sphinx-new-tab-link==0.8.1",
    "pydata-sphinx-theme==0.17.1",
]
dev = [
    "ruff>=0.11,<1",
    "pytest==9.1.0",
    "qiskit-aer==0.17.2",
    "pyscf==2.13.1",
    "cirq==1.6.1",
    "tqecd==0.2.0",
]

[project.urls]
Homepage = "https://github.com/eclipse-qrisp/Qrisp"
"Bug Tracker" = "https://github.com/eclipse-qrisp/Qrisp/issues"

[tool.pylint. messages_control]
disable = ["import-error"]

[tool.ruff]
exclude = ["__init__.py", "docs/", "*.ipynb"]
line-length = 120
target-version = "py312"
force-exclude = true

[tool.ruff.lint]
select = ["I", "E", "W", "D", "PL", "F"]

ignore = [
    "D203",  # incorrect-blank-line-before-class (incompatible with D211)
    "D213",  # multi-line-summary-second-line (incompatible with D212)
    "D400",  # first-line-should-end-with-period
    "D415",  # ends-in-punctuation
]
