[metadata]
name = qrisp
version = 0.6.1
author = The Qrisp authors
author_email = raphael.seidel@fokus.fraunhofer.de
description = A high-level quantum programming language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fraunhoferfokus/Qrisp
project_urls =
    Bug Tracker = https://github.com/fraunhoferfokus/Qrisp/issues
    
[options]
package_dir =
 =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
iqm = qiskit-iqm

[tool:pytest]
testpaths = ./tests
pythonpath = .
