[metadata]
name = qrisp
version = 0.8.2
author = The Qrisp authors
author_email = raphael.seidel@meetiqm.com
description = A high-level quantum programming language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eclipse-qrisp/Qrisp
project_urls =
    Bug Tracker = https://github.com/eclipse-qrisp/Qrisp/issues
    
[options]
package_dir =
 =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src


[tool:pytest]
testpaths = ./tests
pythonpath = .
# Disable the qiskit-aqt-provider pytest plugin: it requires pytest_httpx which
# is not a Qrisp dependency and is not installed in the standard CI environment.
addopts = -p no:pytest_qiskit_aqt
